--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<title>Abu Dhabi Private Tutition</title>
-		<link rel="stylesheet" type="text/css" href="/css/main.css">
+		<link rel="stylesheet" type="text/css" href="/CSS/main.css">
 	</head>
 	<body>
 		<h1> Abu Dhabi Private Tutition </h1>
